--- a/src/main/resources/templates/admin/layout/sidebar.html
+++ b/src/main/resources/templates/admin/layout/sidebar.html
@@ -27,6 +27,18 @@
               </div>
               Exam
             </a>
+            <a class="nav-link" href="/admin/class">
+              <div class="sb-nav-link-icon">
+                <i class="fas fa-tachometer-alt"></i>
+              </div>
+              Class
+            </a>
+            <a class="nav-link" href="/admin/test">
+              <div class="sb-nav-link-icon">
+                <i class="fas fa-tachometer-alt"></i>
+              </div>
+              Test
+            </a>
           </div>
         </div>
       </div>
