--- a/src/main/resources/templates/client/layout/header.html
+++ b/src/main/resources/templates/client/layout/header.html
@@ -19,19 +19,7 @@
                   <ul id="navigation">
                     <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="courses.html">Courses</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li>
-                      <a href="#">Blog</a>
-                      <ul class="submenu">
-                        <li><a href="blog.html">Blog</a></li>
-                        <li>
-                          <a href="blog_details.html">Blog Details</a>
-                        </li>
-                        <li><a href="elements.html">Element</a></li>
-                      </ul>
-                    </li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <!-- Button -->
+                    <li><a href="about.html">Exam</a></li>
 
                     <!-- Nếu chưa login -->
                     <li
