--- a/src/main/resources/templates/admin/class/addStudent.html
+++ b/src/main/resources/templates/admin/class/addStudent.html
@@ -30,10 +30,7 @@
             <h1 class="mt-4">Tạo đề thi</h1>
             <ol class="breadcrumb mb-4">
               <li class="breadcrumb-item">
-                <a th:href="@{/admin}">Dashboard</a>
-              </li>
-              <li class="breadcrumb-item">
-                <a th:href="@{/admin/exam}">Class</a>
+                <a th:href="@{/admin/class}">Class</a>
               </li>
               <li class="breadcrumb-item active">Tạo đề thi</li>
             </ol>
