--- a/src/main/resources/templates/admin/exam/delete.html
+++ b/src/main/resources/templates/admin/exam/delete.html
@@ -27,10 +27,9 @@
       <div id="layoutSidenav_content">
         <main>
           <div class="container-fluid px-4">
-            <h1 class="mt-4">Dashboard</h1>
             <ol class="breadcrumb mb-4">
               <li class="breadcrumb-item active">
-                <a href="/admin/user">Exam</a>
+                <a href="/admin/exam">Exam</a>
               </li>
               <li class="breadcrumb-item active">Delete</li>
             </ol>
