--- a/src/main/resources/templates/client/layout/header.html
+++ b/src/main/resources/templates/client/layout/header.html
@@ -6,7 +6,7 @@
           <!-- Logo -->
           <div class="col-xl-2 col-lg-2">
             <div class="logo">
-              <a href="index.html"><img src="/img/logo/logo.png" alt="" /></a>
+              <a href="/"><img src="/img/logo/logo.png" alt="" /></a>
             </div>
           </div>
           <div class="col-xl-10 col-lg-10">
@@ -17,9 +17,9 @@
               <div class="main-menu d-none d-lg-block">
                 <nav>
                   <ul id="navigation">
-                    <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="courses.html">Courses</a></li>
-                    <li><a href="about.html">Exam</a></li>
+                    <li class="active"><a href="/">Home</a></li>
+                    <li><a href="/course">Courses</a></li>
+                    <li><a href="/exam">Exam</a></li>
 
                     <!-- Nếu chưa login -->
                     <li
